--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ section {
 
 /* Footer */
 footer {
-  background-color: #111;
+  background-color: #f2f2f2;
   color: #fff;
   padding: 30px 15px;
   text-align: center;
