--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ section {
 /* Footer */
 footer {
   background-color: #f2f2f2;
-  color: #fff;
+  color: #111;
   padding: 30px 15px;
   text-align: center;
 }
