--- a/style.css
+++ b/style.css
@@ -450,7 +450,7 @@ section h2 {
 /* Footer */
 footer {
   background-color: #e0e0e0;
-  color: #fff;
+  color: #333333;
   padding: 30px 15px;
   text-align: center;
 }
